--- a/fys4220-jbook/_toc.yml
+++ b/fys4220-jbook/_toc.yml
@@ -2,22 +2,40 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 
 format: jb-book
-root: index
+root: index 
 defaults:
   titlesonly: false
 
 parts:
-  - caption: Module 0 - First Project
-    numbered: true
+  # - caption: Introduction
+  #   numbered: false
+  #   chapters:
+  #   - file: index
+  - caption: Module 0 - Tools
+    numbered: false
     chapters:
-    - file: overview   
-    - url: https://www.uio.no/studier/emner/matnat/fys/FYS4220/index-eng.html
-      title: FYS4220 official webpage
-  - caption: Module 2 - VHDL
-    numbered: True
+    - file: module0-tools/tools_intro
+    #- url: https://www.uio.no/studier/emner/matnat/fys/FYS4220/index-eng.html
+    #  title: FYS4220 official webpage
+  - caption: Module 1 - VHDL
+    numbered: false
     chapters:
     - file: module1-vhdl/vhdl_intro
-  #- caption: Module I - VHDL
+  - caption: Module 2 - Soft core processor
+    numbered: false
+    chapters:
+    - file: module2-softcore/softcore_intro
+  - caption: Module 3 - RTOS
+    numbered: false
+    chapters:
+    - file: module3-rtos/rtos_intro
+  - caption: Module 4 - Project
+    numbered: false
+    chapters:
+    - file: module4-project/project_intro
+  
+
+
 #chapters:
 #- file: markdown
 #- file: notebooks
