--- a/fys4220-jbook/_toc.yml
+++ b/fys4220-jbook/_toc.yml
@@ -20,8 +20,9 @@ parts:
 #      sections: 
     - file: part-information/information_download_tools
     - file: part-information/information_prepare_git
-
-
+    - file: references.md
+    - url: https://github.uio.no/FYS4220-2022 
+      title: Github organization page
   - caption: Main content
     numbered: true
     chapters:
@@ -37,49 +38,47 @@ parts:
       - file: part-vhdl/vhdl_objects_data_types
       - file: part-vhdl/vhdl_operators
       - file: part-vhdl/vhdl_concurrent_statements
-      - file: part-vhdl/vhdl_ex_first_project
-      - file: part-vhdl/vhdl_description_models
-      - file: part-vhdl/vhdl_process
-      - file: part-vhdl/vhdl_state_machines
-      - file: part-vhdl/vhdl_packages_subprograms
-      - file: part-vhdl/vhdl_testbenches
-      - file: part-vhdl/vhdl_generics
+#      - file: part-vhdl/vhdl_description_models
+#      - file: part-vhdl/vhdl_process
+#      - file: part-vhdl/vhdl_state_machines
+#      - file: part-vhdl/vhdl_packages_subprograms
+#      - file: part-vhdl/vhdl_testbenches
+#      - file: part-vhdl/vhdl_generics
     - file: part-embedded/embedded
-      sections:
-      - file: part-embedded/embedded_intro
-      - file: part-embedded/embedded_memory_mapped
-      - file: part-embedded/embedded_hal
-      - file: part-embedded/embedded_nios2_system
-      - file: part-embedded/embedded_memory_mapped_sw
-      - file: part-embedded/embedded_interrupt
-    - file: part-rtos/rtos.md
-      sections:
-      - file: part-rtos/rtos_intro.md 
-        title: Introduction to RTOS & uC/OS-II
-      - file: part-rtos/rtos_tasks    
-      - file: part-rtos/rtos_latency_jitter
-      - file: part-rtos/rtos_intertask_communication
-      - file: part-rtos/rtos_basic_example
-      - file: part-rtos/rtos_semaphores_example
-    - file: references.md
-  - caption: Assignments
-    numbered: true
-    chapters:
-    - file: part-assignments/assignments_intro
-#    - file: part-assignments/assignments_preparing_git
-    - file: part-assignments/assignments_your_first_fpga_project
-    - file: part-assignments/assignments_seven_segment_display
-    - file: part-assignments/assignments_synchronous_logic
-    - file: part-assignments/assignments_synchronization
-  - caption: Project
-    numbered: true
-    chapters:
-#    - file: part-project/project
 #      sections:
-    - file: part-project/project_intro
-    - file: part-project/project_uart
-    - file: part-project/project_nios2
-    - file: part-project/data_rate
+#      - file: part-embedded/embedded_intro
+#      - file: part-embedded/embedded_memory_mapped
+#      - file: part-embedded/embedded_hal
+#      - file: part-embedded/embedded_nios2_system
+#      - file: part-embedded/embedded_memory_mapped_sw
+#      - file: part-embedded/embedded_interrupt
+    - file: part-rtos/rtos.md
+#      sections:
+#      - file: part-rtos/rtos_intro.md 
+#        title: Introduction to RTOS & uC/OS-II
+#      - file: part-rtos/rtos_tasks    
+#      - file: part-rtos/rtos_latency_jitter
+#      - file: part-rtos/rtos_intertask_communication
+#      - file: part-rtos/rtos_basic_example
+#      - file: part-rtos/rtos_semaphores_example
+  - caption: Exercises
+    numbered: false
+    chapters:
+    - file: part-exercises/exercises_intro
+#      sections:
+    - file: part-exercises/exercises_your_first_fpga_project
+#    - file: part-exercises/exercises_seven_segment_display
+#      - file: part-exercises/exercises_synchronous_logic
+#      - file: part-exercises/exercises_synchronization
+  - caption: Project
+    numbered: false
+    chapters:
+    - file: part-project/project
+#      sections:
+#    - file: part-project/project_intro
+#    - file: part-project/project_uart
+#    - file: part-project/project_nios2
+#    - file: part-project/data_rate
 #parts:
 #  - caption: Introduction
 #    chapters:
