--- a/environment.yml
+++ b/environment.yml
@@ -1,173 +1,173 @@
-name: fys4220-test
+name: jbook
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - bzip2=1.0.8=h1de35cc_0
-  - ca-certificates=2022.5.18.1=h033912b_0
-  - cairo=1.16.0=h691a603_2
-  - certifi=2022.5.18.1=py310h2ec42d9_0
-  - fontconfig=2.13.1=ha9ee91d_0
-  - freetype=2.11.0=hd8bbffd_0
-  - gettext=0.21.0=h7535e17_0
-  - glib=2.69.1=h8346a28_1
-  - icu=58.2=h0a44026_3
-  - libcxx=12.0.0=h2f01273_0
-  - libffi=3.3=hb1e8313_2
-  - libiconv=1.16=hca72f7f_2
-  - libpng=1.6.37=ha441bb4_0
-  - libxcb=1.13=h0d85af4_1004
-  - libxml2=2.9.14=hbf8cd5e_0
-  - llvm-openmp=12.0.0=h0dcd299_1
-  - ncurses=6.3=hca72f7f_2
-  - openssl=1.1.1o=hfe4f2af_0
-  - pcre=8.45=h23ab428_0
-  - pip=21.2.4=py310hecd8cb5_0
-  - pixman=0.40.0=h9ed2024_1
-  - pthread-stubs=0.4=hc929b4f_1001
-  - python=3.10.4=hdfd78df_0
+  - alabaster=0.7.12=py_0
+  - anyio=3.6.1=pyhd8ed1ab_1
+  - appnope=0.1.3=pyhd8ed1ab_0
+  - argon2-cffi=21.3.0=pyhd8ed1ab_0
+  - argon2-cffi-bindings=21.2.0=py310hf8d0d8f_2
+  - asttokens=2.0.8=pyhd8ed1ab_0
+  - attrs=21.4.0=pyhd8ed1ab_0
+  - babel=2.10.3=pyhd8ed1ab_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - beautifulsoup4=4.11.1=pyha770c72_0
+  - bleach=5.0.1=pyhd8ed1ab_0
+  - brotlipy=0.7.0=py310hf8d0d8f_1004
+  - bzip2=1.0.8=h620ffc9_4
+  - ca-certificates=2022.6.15.1=h4653dfc_0
+  - certifi=2022.6.15.1=pyhd8ed1ab_0
+  - cffi=1.15.1=py310he00a5c5_0
+  - charset-normalizer=2.1.1=pyhd8ed1ab_0
+  - click=8.1.3=py310hbe9552e_0
+  - click-completion=0.5.0=py_1
+  - click-log=0.4.0=pyhd8ed1ab_0
+  - colorama=0.4.5=pyhd8ed1ab_0
+  - cryptography=37.0.1=py310h834c97f_0
+  - dataclasses=0.8=pyhc8e2a94_3
+  - debugpy=1.6.3=py310hc6dc59f_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - docutils=0.17.1=py310hbe9552e_2
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - executing=1.0.0=pyhd8ed1ab_0
+  - flit-core=3.7.1=pyhd8ed1ab_0
+  - gitdb=4.0.9=pyhd8ed1ab_0
+  - gitpython=3.1.27=pyhd8ed1ab_0
+  - greenlet=1.1.3=py310h0f1eb42_0
+  - icu=70.1=h6b3803e_0
+  - idna=3.3=pyhd8ed1ab_0
+  - imagesize=1.4.1=pyhd8ed1ab_0
+  - importlib-metadata=4.11.4=py310hbe9552e_0
+  - importlib_metadata=4.11.4=hd8ed1ab_0
+  - importlib_resources=5.9.0=pyhd8ed1ab_0
+  - ipykernel=6.15.2=pyh736e0ef_0
+  - ipython=8.5.0=pyhd1c38e8_1
+  - ipython_genutils=0.2.0=py_1
+  - ipywidgets=7.7.2=pyhd8ed1ab_0
+  - jedi=0.18.1=pyhd8ed1ab_2
+  - jinja2=3.1.2=pyhd8ed1ab_1
+  - jsonschema=3.2.0=pyhd8ed1ab_3
+  - jupyter-book=0.13.1=pyhd8ed1ab_0
+  - jupyter-cache=0.4.3=pyhd8ed1ab_0
+  - jupyter-server-mathjax=0.2.6=pyhc268e32_0
+  - jupyter-sphinx=0.3.2=pyhd8ed1ab_1
+  - jupyter_client=7.3.5=pyhd8ed1ab_0
+  - jupyter_core=4.11.1=py310hbe9552e_0
+  - jupyter_server=1.18.1=pyhd8ed1ab_0
+  - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
+  - jupyterlab_widgets=1.1.1=pyhd8ed1ab_0
+  - latexcodec=2.0.1=pyh9f0ad1d_0
+  - libcxx=14.0.6=h848a8c0_0
+  - libffi=3.4.2=hc377ac9_4
+  - libiconv=1.16=h642e427_0
+  - libsodium=1.0.18=h27ca646_1
+  - libxml2=2.9.14=h9d8dfc2_4
+  - libxslt=1.1.35=ha8fb468_0
+  - libzlib=1.2.12=ha287fd2_2
+  - linkify-it-py=1.0.3=pyhd8ed1ab_0
+  - lxml=4.9.1=py310h02f21da_0
+  - markdown-it-py=1.1.0=pyhd8ed1ab_0
+  - markupsafe=2.1.1=py310hf8d0d8f_1
+  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
+  - mdit-py-plugins=0.2.8=pyhd8ed1ab_0
+  - mistune=0.8.4=py310he2143c4_1005
+  - myst-nb=0.13.2=pyhd8ed1ab_0
+  - myst-parser=0.15.2=pyhd8ed1ab_0
+  - nbclient=0.5.13=pyhd8ed1ab_0
+  - nbconvert=6.5.3=pyhd8ed1ab_0
+  - nbconvert-core=6.5.3=pyhd8ed1ab_0
+  - nbconvert-pandoc=6.5.3=pyhd8ed1ab_0
+  - nbdime=3.1.1=pyhd8ed1ab_0
+  - nbformat=5.4.0=pyhd8ed1ab_0
+  - ncurses=6.3=h1a28f6b_3
+  - nest-asyncio=1.5.5=pyhd8ed1ab_0
+  - notebook=6.4.12=pyha770c72_0
+  - openssl=3.0.5=h03a7124_2
+  - packaging=21.3=pyhd8ed1ab_0
+  - pandoc=2.12=hca03da5_0
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
+  - pip=22.1.2=py310hca03da5_0
+  - prometheus_client=0.14.1=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.31=pyha770c72_0
+  - psutil=5.9.2=py310h8e9501a_0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pybtex=0.24.0=pyhd8ed1ab_2
+  - pybtex-docutils=1.0.2=py310hbe9552e_1
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pydata-sphinx-theme=0.8.1=pyhd8ed1ab_0
+  - pygments=2.13.0=pyhd8ed1ab_0
+  - pyopenssl=22.0.0=pyhd8ed1ab_0
+  - pyparsing=3.0.9=pyhd8ed1ab_0
+  - pyrsistent=0.18.1=py310hf8d0d8f_1
+  - pysocks=1.7.1=pyha2e5f31_6
+  - python=3.10.5=h4eee789_0_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-fastjsonschema=2.16.1=pyhd8ed1ab_0
   - python_abi=3.10=2_cp310
-  - readline=8.1.2=hca72f7f_1
-  - setuptools=61.2.0=py310hecd8cb5_0
-  - sqlite=3.38.3=h707629a_0
-  - tk=8.6.12=h5d9f67b_0
+  - pytz=2022.2.1=pyhd8ed1ab_0
+  - pyyaml=6.0=py310hf8d0d8f_4
+  - pyzmq=23.2.1=py310h666594b_0
+  - readline=8.1.2=h1a28f6b_1
+  - requests=2.28.1=pyhd8ed1ab_1
+  - send2trash=1.8.0=pyhd8ed1ab_0
+  - setuptools=63.4.1=py310hca03da5_0
+  - shellingham=1.5.0=pyhd8ed1ab_0
+  - six=1.16.0=pyh6c4a22f_0
+  - smmap=3.0.5=pyh44b312d_0
+  - sniffio=1.3.0=pyhd8ed1ab_0
+  - snowballstemmer=2.2.0=pyhd8ed1ab_0
+  - soupsieve=2.3.2.post1=pyhd8ed1ab_0
+  - sphinx=4.5.0=pyh6c4a22f_0
+  - sphinx-book-theme=0.3.3=pyhd8ed1ab_0
+  - sphinx-comments=0.0.3=pyh9f0ad1d_0
+  - sphinx-copybutton=0.5.0=pyhd8ed1ab_0
+  - sphinx-design=0.1.0=pyhd8ed1ab_0
+  - sphinx-external-toc=0.2.4=pyhd8ed1ab_0
+  - sphinx-jupyterbook-latex=0.4.6=pyhd8ed1ab_0
+  - sphinx-multitoc-numbering=0.1.3=pyhd8ed1ab_0
+  - sphinx-thebe=0.1.2=pyhd8ed1ab_0
+  - sphinx-togglebutton=0.3.1=pyhd8ed1ab_0
+  - sphinxcontrib-applehelp=1.0.2=py_0
+  - sphinxcontrib-bibtex=2.5.0=pyhd8ed1ab_0
+  - sphinxcontrib-devhelp=1.0.2=py_0
+  - sphinxcontrib-htmlhelp=2.0.0=pyhd8ed1ab_0
+  - sphinxcontrib-jsmath=1.0.1=py_0
+  - sphinxcontrib-qthelp=1.0.3=py_0
+  - sphinxcontrib-serializinghtml=1.1.5=pyhd8ed1ab_2
+  - sqlalchemy=1.4.41=py310h8e9501a_0
+  - sqlite=3.39.2=h1058600_0
+  - stack_data=0.5.0=pyhd8ed1ab_0
+  - terminado=0.15.0=py310hbe9552e_0
+  - tinycss2=1.1.1=pyhd8ed1ab_0
+  - tk=8.6.12=hb8d0fd4_0
+  - tornado=6.2=py310h02f21da_0
+  - traitlets=5.3.0=pyhd8ed1ab_0
+  - typing_extensions=4.3.0=pyha770c72_0
   - tzdata=2022a=hda174b7_0
+  - uc-micro-py=1.0.1=pyhd8ed1ab_0
+  - urllib3=1.26.11=pyhd8ed1ab_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - webencodings=0.5.1=py_1
+  - websocket-client=1.4.1=pyhd8ed1ab_0
   - wheel=0.37.1=pyhd3eb1b0_0
-  - xorg-libxau=1.0.9=h35c211d_0
-  - xorg-libxdmcp=1.1.3=h35c211d_0
-  - xz=5.2.5=hca72f7f_1
-  - zlib=1.2.12=h4dc903c_2
+  - widgetsnbextension=3.6.1=pyha770c72_0
+  - xz=5.2.5=h1a28f6b_1
+  - yaml=0.2.5=h3422bc3_2
+  - zeromq=4.3.4=hbdafb3b_1
+  - zipp=3.8.1=pyhd8ed1ab_0
+  - zlib=1.2.12=ha287fd2_2
   - pip:
-    - alabaster==0.7.12
-    - anyio==3.6.1
-    - appnope==0.1.3
-    - argon2-cffi==21.3.0
-    - argon2-cffi-bindings==21.2.0
-    - asttokens==2.0.5
-    - attrs==21.4.0
-    - babel==2.10.1
-    - backcall==0.2.0
-    - beautifulsoup4==4.11.1
-    - bleach==5.0.0
-    - cairocffi==1.3.0
-    - cairosvg==2.5.2
-    - cffi==1.15.0
-    - charset-normalizer==2.0.12
-    - click==8.1.3
-    - colorama==0.4.4
-    - cssselect2==0.6.0
-    - cycler==0.11.0
-    - debugpy==1.6.0
-    - decorator==5.1.1
-    - defusedxml==0.7.1
-    - docutils==0.17.1
-    - entrypoints==0.4
-    - executing==0.8.3
-    - fastjsonschema==2.15.3
-    - fonttools==4.33.3
-    - gitdb==4.0.9
-    - gitpython==3.1.27
-    - greenlet==1.1.2
-    - idna==3.3
-    - imagesize==1.3.0
-    - importlib-metadata==4.11.4
-    - ipykernel==6.13.1
-    - ipython==8.4.0
-    - ipython-genutils==0.2.0
-    - ipywidgets==7.7.0
-    - jedi==0.18.1
-    - jinja2==3.1.2
-    - jsonschema==3.2.0
-    - jupyter-book==0.13.0
-    - jupyter-cache==0.4.3
-    - jupyter-client==7.3.4
-    - jupyter-core==4.10.0
-    - jupyter-server==1.17.1
-    - jupyter-server-mathjax==0.2.5
-    - jupyter-sphinx==0.3.2
-    - jupyterlab-pygments==0.2.2
-    - jupyterlab-widgets==1.1.0
-    - kiwisolver==1.4.2
-    - latexcodec==2.0.1
-    - linkify-it-py==1.0.3
-    - markdown-it-py==1.1.0
-    - markupsafe==2.1.1
-    - matplotlib==3.5.2
-    - matplotlib-inline==0.1.3
-    - mdit-py-plugins==0.2.8
-    - mistune==0.8.4
-    - myst-nb==0.13.2
-    - myst-parser==0.15.2
-    - nbclient==0.5.13
-    - nbconvert==6.5.0
-    - nbdime==3.1.1
-    - nbformat==5.4.0
-    - nest-asyncio==1.5.5
-    - notebook==6.4.12
-    - numpy==1.22.4
-    - packaging==21.3
-    - pandocfilters==1.5.0
-    - parso==0.8.3
-    - pexpect==4.8.0
-    - pickleshare==0.7.5
-    - pillow==9.1.1
-    - prometheus-client==0.14.1
-    - prompt-toolkit==3.0.29
-    - psutil==5.9.1
-    - ptyprocess==0.7.0
-    - pure-eval==0.2.2
-    - pybtex==0.24.0
-    - pybtex-docutils==1.0.2
-    - pycairo==1.21.0
-    - pycparser==2.21
-    - pydata-sphinx-theme==0.8.1
-    - pygments==2.12.0
-    - pyparsing==3.0.9
-    - pyrsistent==0.18.1
-    - python-dateutil==2.8.2
-    - pytz==2022.1
-    - pyyaml==6.0
-    - pyzmq==23.1.0
-    - requests==2.28.0
-    - send2trash==1.8.0
-    - six==1.16.0
-    - smmap==5.0.0
-    - sniffio==1.2.0
-    - snowballstemmer==2.2.0
-    - soupsieve==2.3.2.post1
-    - sphinx==4.5.0
-    - sphinx-book-theme==0.3.2
-    - sphinx-comments==0.0.3
-    - sphinx-copybutton==0.5.0
-    - sphinx-design==0.1.0
-    - sphinx-external-toc==0.2.4
-    - sphinx-jupyterbook-latex==0.4.6
-    - sphinx-multitoc-numbering==0.1.3
-    - sphinx-thebe==0.1.2
-    - sphinx-togglebutton==0.3.1
-    - sphinxcontrib-applehelp==1.0.2
-    - sphinxcontrib-bibtex==2.4.2
-    - sphinxcontrib-devhelp==1.0.2
-    - sphinxcontrib-htmlhelp==2.0.0
-    - sphinxcontrib-jsmath==1.0.1
-    - sphinxcontrib-mermaid==0.7.1
-    - sphinxcontrib-qthelp==1.0.3
-    - sphinxcontrib-serializinghtml==1.1.5
-    - sphinxcontrib-wavedrom==3.0.4
-    - sqlalchemy==1.4.37
-    - stack-data==0.2.0
-    - svgwrite==1.4.2
-    - terminado==0.15.0
-    - tinycss2==1.1.1
-    - tornado==6.1
-    - traitlets==5.2.2.post1
-    - uc-micro-py==1.0.1
-    - urllib3==1.26.9
-    - wavedrom==2.0.3.post3
-    - wcwidth==0.2.5
-    - webencodings==0.5.1
-    - websocket-client==1.3.2
-    - widgetsnbextension==3.6.0
-    - xcffib==0.11.1
-    - zipp==3.8.0
-prefix: /Users/ketilroe/miniconda3/envs/fys4220-test
+    - ghp-import==2.1.0
+    - httplib2==0.20.4
+    - plantuml==0.3.0
+    - python-graphviz==0.20.1
+    - schemdraw==0.15
+prefix: /Users/ketilroe/miniconda3/envs/jbook
